feat(api): added health endpoint and also modified generate api docs script to add version from package.json
